--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ title: Trevor Maxwell
 logo: /assets/images/profile_cropped.jpg
 # show_downloads: true
 theme: jekyll-theme-minimal
+plugins:
+  - jekyll-tabs
