--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,6 @@ theme: jekyll-theme-minimal
 
 description:
   <p align="center">
-  <a href="https://www.linkedin.com/in/trevormaxwell/">LinkedIn</a>
+  <a href="https://www.linkedin.com/in/trevormaxwell/">LinkedIn</a> |
+  <a href="/work-history">Work History</a>
   </p>  
