--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-minimal
 
 description:
   <p align="center">
-  <a href="assets/documents/Resume_General.pdf">Resume</a> |
+  <a href="assets/documents/Trevor Maxwell Resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/trevormaxwell/">LinkedIn</a> |
   <a href="https://github.com/trevormaxwell/">GitHub</a>
   </p>  
